added experimental weighted

--- a/ecolitestweight.ipynb
+++ b/ecolitestweight.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -167,44 +167,44 @@
      "output_type": "stream",
      "text": [
       "1 nearest neighbors\n",
-      "Testing Accuracy: 81.51385102891646%\n",
+      "Testing Accuracy: 81.02593950700974%\n",
       "Training Accuracy: 100.0%\n",
       "\n",
       "2 nearest neighbors\n",
-      "Testing Accuracy: 79.29958489268347%\n",
-      "Training Accuracy: 87.37782245604592%\n",
+      "Testing Accuracy: 79.46700194810225%\n",
+      "Training Accuracy: 87.04265454075586%\n",
       "\n",
       "3 nearest neighbors\n",
-      "Testing Accuracy: 84.47594685840201%\n",
-      "Training Accuracy: 90.47847163304151%\n",
+      "Testing Accuracy: 84.4876884164685%\n",
+      "Training Accuracy: 90.56529359022372%\n",
       "\n",
       "4 nearest neighbors\n",
-      "Testing Accuracy: 84.29707333013923%\n",
-      "Training Accuracy: 87.21425581205877%\n",
+      "Testing Accuracy: 85.55615612446441%\n",
+      "Training Accuracy: 86.69370715411448%\n",
       "\n",
       "5 nearest neighbors\n",
-      "Testing Accuracy: 86.89686299759337%\n",
-      "Training Accuracy: 88.74237298429219%\n",
+      "Testing Accuracy: 84.42052514000859%\n",
+      "Training Accuracy: 88.78822121843825%\n",
       "\n",
       "6 nearest neighbors\n",
-      "Testing Accuracy: 84.7689122342649%\n",
-      "Training Accuracy: 87.69699219237492%\n",
+      "Testing Accuracy: 86.86656088726536%\n",
+      "Training Accuracy: 87.80387819161338%\n",
       "\n",
       "7 nearest neighbors\n",
-      "Testing Accuracy: 84.99946521526911%\n",
-      "Training Accuracy: 88.59870128093785%\n",
+      "Testing Accuracy: 85.42066897126715%\n",
+      "Training Accuracy: 88.43704606217347%\n",
       "\n",
       "8 nearest neighbors\n",
-      "Testing Accuracy: 86.21896378593155%\n",
-      "Training Accuracy: 87.49442963502494%\n",
+      "Testing Accuracy: 84.4229418124928%\n",
+      "Training Accuracy: 87.53369619978602%\n",
       "\n",
       "9 nearest neighbors\n",
-      "Testing Accuracy: 85.96994953117698%\n",
-      "Training Accuracy: 87.65310412818819%\n",
+      "Testing Accuracy: 86.02598301294988%\n",
+      "Training Accuracy: 87.66713554427587%\n",
       "\n",
       "10 nearest neighbors\n",
-      "Testing Accuracy: 84.65257229833841%\n",
-      "Training Accuracy: 86.79043512174442%\n",
+      "Testing Accuracy: 84.75079443617797%\n",
+      "Training Accuracy: 86.86515766693635%\n",
       "\n"
      ]
     }
@@ -255,7 +255,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -316,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,6 +383,7 @@
     "    dist = 1\n",
     "    for x in range(len(neighborset)-1):\n",
     "        dist += abs(neighborset[x] - testset[x])\n",
+    "        dist = pow(dist, 2)\n",
     "    #print (dist)    \n",
     "    return 1/dist\n",
     "\n",
@@ -424,112 +427,67 @@
     "\ttotalAccuracy = 0.0\n",
     "\ttotalTests = 100\n",
     "\tk = 7\n",
-    "\t\n",
+    "\t#Does totalTests number of tests for an averge\n",
+    "\tfor x in range(0, totalTests):\n",
+    "\t\t#trains and tests with a new fold in data everytime for good measures\n",
+    "\t\ttrain('newecolicopy.data', kFoldPercent, training, testing)\n",
     "\n",
-    "\t#Tests a range of different neighbors\n",
-    "\tfor k in range(1, 11):\n",
-    "\t\tprint(repr(k) + ' nearest neighbors')\n",
-    "\n",
-    "\n",
-    "\t\t#Does totalTests number of tests for an averge\n",
-    "\t\tfor x in range(0, totalTests):\n",
-    "\n",
-    "\t\t\t#trains and tests with a new fold in data everytime for good measures\n",
-    "\t\t\ttrain('newecolicopy.data', kFoldPercent, training, testing)\n",
-    "\n",
-    "\t\t\t#for each data in testing, classify it and measure accuracy\n",
-    "\t\t\tfor i in range(len(testing)):\n",
-    "\t\t\t\tresult = classify(training, testing[i], k)\n",
-    "\t\t\t\tpredictions.append(result)\n",
-    "\t\t\taccuracy = calculateAccuracy(predictions, testing)\n",
-    "\t\t\ttotalAccuracy += accuracy\n",
+    "\t\t#for each data in testing, classify it and measure accuracy\n",
+    "\t\tk = len(testing)\n",
+    "\t\tfor i in range(len(testing)):\n",
+    "\t\t\tresult = classify(training, testing[i], k)\n",
+    "\t\t\tpredictions.append(result)\n",
+    "\t\taccuracy = calculateAccuracy(predictions, testing)\n",
+    "\t\ttotalAccuracy += accuracy\n",
     "\n",
     "\n",
-    "\t\t\t#resets the data for another fold\n",
-    "\t\t\tdel result\n",
-    "\t\t\tdel predictions[:]\n",
-    "\t\t\tdel training[:]\n",
-    "\t\t\tdel testing[:]\n",
+    "        #resets the data for another fold\n",
+    "\t\tdel result\n",
+    "\t\tdel predictions[:]\n",
+    "\t\tdel training[:]\n",
+    "\t\tdel testing[:]\n",
     "\n",
-    "\t\t\taccuracy = 0\n",
-    "\t\ttotalAccuracy = totalAccuracy / totalTests\n",
-    "\t\tprint('Testing Accuracy: ' + repr(totalAccuracy) + '%')\n",
+    "\t\taccuracy = 0\n",
+    "\ttotalAccuracy = totalAccuracy / totalTests\n",
+    "\tprint('Testing Accuracy: ' + repr(totalAccuracy) + '%')\n",
     "\n",
-    "\t\ttotalAccuracy = 0\n",
+    "\ttotalAccuracy = 0\n",
     "\n",
-    "\t\t#Does totalTests number of tests for an averge\n",
-    "\t\tfor x in range(0, totalTests):\n",
+    "    #Does totalTests number of tests for an averge\n",
+    "\tfor x in range(0, totalTests):\n",
+    "\t\ttrain('newecolicopy.data', kFoldPercent, training, testing)\n",
+    "\t\tk = len(training)\n",
+    "\t\tfor i in range(len(training)):\n",
+    "            #only use the training data\n",
+    "\t\t\tresult = classify(training, training[i], k)\n",
+    "\t\t\tpredictions.append(result)\n",
+    "\t\taccuracy = calculateAccuracy(predictions, training)\n",
+    "\t\ttotalAccuracy += accuracy\n",
     "\n",
-    "\t\t\ttrain('newecolicopy.data', kFoldPercent, training, testing)\n",
+    "\t\tdel result\n",
+    "\t\tdel predictions[:]\n",
+    "\t\tdel training[:]\n",
+    "\t\tdel testing[:]\n",
     "\n",
-    "\t\t\tfor i in range(len(training)):\n",
-    "\t\t\t\t#only use the training data\n",
-    "\t\t\t\tresult = classify(training, training[i], k)\n",
-    "\t\t\t\tpredictions.append(result)\n",
-    "\t\t\taccuracy = calculateAccuracy(predictions, training)\n",
-    "\t\t\ttotalAccuracy += accuracy\n",
+    "\t\taccuracy = 0\n",
+    "\ttotalAccuracy = totalAccuracy / totalTests\n",
+    "\tprint('Training Accuracy: ' + repr(totalAccuracy) + '%\\n')\n",
     "\n",
-    "\t\t\tdel result\n",
-    "\t\t\tdel predictions[:]\n",
-    "\t\t\tdel training[:]\n",
-    "\t\t\tdel testing[:]\n",
-    "\n",
-    "\t\t\taccuracy = 0\n",
-    "\t\ttotalAccuracy = totalAccuracy / totalTests\n",
-    "\t\tprint('Training Accuracy: ' + repr(totalAccuracy) + '%\\n')\n",
-    "\n",
-    "\t\ttotalAccuracy = 0\n",
+    "\ttotalAccuracy = 0\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 nearest neighbors\n",
-      "Testing Accuracy: 82.05532701054757%\n",
+      "Testing Accuracy: 74.27052159036391%\n",
       "Training Accuracy: 100.0%\n",
-      "\n",
-      "2 nearest neighbors\n",
-      "Testing Accuracy: 79.16938144545756%\n",
-      "Training Accuracy: 100.0%\n",
-      "\n",
-      "3 nearest neighbors\n",
-      "Testing Accuracy: 84.47819659720159%\n",
-      "Training Accuracy: 92.07697763543018%\n",
-      "\n",
-      "4 nearest neighbors\n",
-      "Testing Accuracy: 86.42758239145591%\n",
-      "Training Accuracy: 92.70925090458643%\n",
-      "\n",
-      "5 nearest neighbors\n",
-      "Testing Accuracy: 86.9555518561009%\n",
-      "Training Accuracy: 90.5976165083827%\n",
-      "\n",
-      "6 nearest neighbors\n",
-      "Testing Accuracy: 86.14771263790215%\n",
-      "Training Accuracy: 91.80008149650209%\n",
-      "\n",
-      "7 nearest neighbors\n",
-      "Testing Accuracy: 86.23566501944069%\n",
-      "Training Accuracy: 90.18454664564202%\n",
-      "\n",
-      "8 nearest neighbors\n",
-      "Testing Accuracy: 86.05786248732156%\n",
-      "Training Accuracy: 90.01225261742421%\n",
-      "\n",
-      "9 nearest neighbors\n",
-      "Testing Accuracy: 87.2376252748597%\n",
-      "Training Accuracy: 88.74407335972327%\n",
-      "\n",
-      "10 nearest neighbors\n",
-      "Testing Accuracy: 86.35393792761519%\n",
-      "Training Accuracy: 89.27958499496951%\n",
       "\n"
      ]
     }
